log/build_2024-06-04_12-25-07/tritech_micron/stderr.log
  File "/home/bluerov/ROS-Humble-BlueRov2-Driver/install/tritech_micron/lib/python3.10/site-packages/tritech_micron/sonar.py", line 62
    def __init__(self, port="/dev/sonar", node, **kwargs):
                                          ^^^^
SyntaxError: non-default argument follows default argument

